fix spacing of collapsable menu items

--- a/src/scss/organisms/Header.scss
+++ b/src/scss/organisms/Header.scss
@@ -56,6 +56,9 @@
   background-color: white;
   border-right: 2px #d3d3d366 solid;
   padding: 0;
+  .collapsable-content {
+    margin-top: 13px;
+  }
   .nav-link {
     color: black;
     padding: 21px;
